--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-scripts": "^5.0.1",
     "redux": "^5.0.1",
     "redux-counter-app": "file:",
+    "redux-thunk": "^3.1.0",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
